Fix Video Reveal Menu Overflow Cutoff

--- a/ui/pagelets/css/_video.scss
+++ b/ui/pagelets/css/_video.scss
@@ -80,6 +80,7 @@
 
     &:hover .reveal {
       transform: translateY(-100%);
+      overflow-y: scroll;
       opacity: 1;
     }
 
